# unitTesting

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: student.h  whitelist.hpp
src/: CMakeLists.txt  student.cpp  whitelist.cpp
test/: CMakeLists.txt  test.cpp
